--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,119 @@ body {
   background-color: rgb(146, 48, 48);
 
   width: 100vw;
-  height: 100vh;
+  height: auto;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   flex-direction: column;
   transition: 1s all ease;
-  overflow: hidden;
+  overflow-x: hidden;
+}
+#btn-info {
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  font-size: 2rem;
+
+  position: absolute;
+  left: 1rem;
+  top: 2rem;
+}
+#btn-report {
+  border: 1px solid white;
+  width: auto;
+  height: auto;
+  padding: 1rem;
+  font-size: 1rem;
+
+  position: absolute;
+  right: 1rem;
+  top: 2rem;
+}
+#btn-close-info {
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
+  width: 3rem;
+  height: 3rem;
+
+  color: white;
+  border: 1px solid white;
+}
+.banner {
+  position: absolute;
+  background-color: rgba(70, 66, 66, 1);
+  width: 100vw;
+  height: 60vh;
+  z-index: 1000;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  transition: 1s all;
+  animation: animationBanner 1s ease;
+}
+.banner-report {
+  position: absolute;
+  background-color: rgba(70, 66, 66, 1);
+  width: 100vw;
+  height: 60vh;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 1s all;
+  color: white;
+  font-size: 2rem;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  animation: animationBanner 1s ease;
+}
+
+#btn-close-report {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  width: 3rem;
+  height: 3rem;
+
+  color: white;
+  border: 1px solid white;
+}
+
+@keyframes animationBanner {
+  0% {
+    top: -100%;
+  }
+  40% {
+    top: -70%;
+  }
+  70% {
+    top: -60%;
+  }
+  100% {
+    top: 0;
+  }
+}
+h1 {
+  font-size: 3rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: white;
+}
+#info {
+  color: white;
+  width: 90%;
+
+  line-height: 2.7rem;
+  text-align: center;
+
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 1rem;
+}
+
+a {
+  color: white;
+  cursor: pointer;
 }
 body.bactive3 {
   background-color: rgb(146, 48, 48);
@@ -30,7 +136,8 @@ body.bactive2 {
   align-items: center;
   padding: 1rem;
 }
-button {
+button,
+.grid button {
   width: 7rem;
   height: 2rem;
   border-radius: 0.5rem;
@@ -59,7 +166,7 @@ button:hover {
 
 .grid {
   width: 30rem;
-  height: 30rem;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -69,7 +176,7 @@ button:hover {
 }
 .content-timer-pomodoro {
   width: 100%;
-  height: 100%;
+  height: 15rem;
 
   background-color: rgba(70, 66, 66, 0.2);
   display: flex;
@@ -95,6 +202,54 @@ button:hover {
 #stop {
   display: none;
   transition: 1s all;
+}
+.pomodoro-aggiunto,
+.pausa-corta-aggiunto,
+.pausa-lunga-aggiunto {
+  width: 5rem;
+  height: 5rem;
+
+  background-image: url(pomorodo.svg);
+  background-position: center;
+  background-size: cover;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pausa-corta-aggiunto {
+  background-image: url(short-pausa.svg);
+}
+.pausa-lunga-aggiunto {
+  background-image: url(long-pausa.svg);
+}
+
+#info-task {
+  font-size: 2rem;
+  color: white;
+}
+
+#task-short,
+#task-long {
+  margin: 2rem;
+  width: 90%;
+  height: auto;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 10px;
+}
+#task-pomodoro {
+  margin: 2rem;
+  width: 90%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 10px;
+  flex-wrap: wrap;
 }
 
 @media (min-width: 350px) and (max-width: 390px) {
@@ -139,6 +294,10 @@ button:hover {
   #start {
     width: 15rem;
     height: 17rem;
+  }
+
+  #info {
+    font-size: 1.3rem;
   }
 }
 
@@ -191,5 +350,62 @@ button:hover {
   }
   .display p {
     font-size: 10rem;
+  }
+  #info {
+    font-size: 1.3rem;
+  }
+}
+
+@media (min-width: 900px) and (max-width: 1300px) {
+  html {
+    font-size: 11px;
+  }
+  body {
+    justify-content: start;
+  }
+  .grid {
+    width: 50rem;
+    height: 20rem;
+  }
+  .container-button {
+    flex-direction: row;
+    height: auto;
+    width: 50rem;
+  }
+  button {
+    width: 10rem;
+    height: 3rem;
+    border-radius: 0.5rem;
+    background-color: inherit;
+    border: 1px solid white;
+    color: white;
+    transition: 1s all;
+    cursor: pointer;
+  }
+  .active {
+    height: 3rem;
+    border-radius: 0.5rem;
+    background-color: white;
+    border: 1px solid white;
+    color: black;
+    width: 10rem;
+  }
+  button:hover {
+    width: 12rem;
+    height: 3rem;
+    border-radius: 0.5rem;
+    background-color: white;
+    border: 1px solid white;
+    color: black;
+  }
+  #start {
+    width: 15rem;
+    height: 4rem;
+  }
+  .display p {
+    font-size: 10rem;
+  }
+  #info {
+    font-size: 1.5rem;
   }
 }
